--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -14,7 +14,7 @@
 <div class="d-flex">
     <!-- Sidebar -->
     <div th:replace="~{admin/sidebar :: sidebar}"></div>
-<class="d-flex flex-column flex-md-row">
+<div class="d-flex flex-column flex-md-row">
 
     <!-- Main Content -->
     <main class="flex-grow-1 p-4">
@@ -23,8 +23,7 @@
         </div>
     </main>
 </div>
-        <!-- Footer -->
-    <div th:replace="fragments/footer :: footer"></div>
+
 <!-- Bootstrap Bundle (con Popper para dropdowns, modals, tooltips, etc.) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
